<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="200dp">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_name"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_description"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_image"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_adress"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_telephone"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_quadrature"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_quad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_room"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_in_price"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/re_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_in_ok"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dialog_in_cancel"/>




    </LinearLayout>





</LinearLayout>